--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
 .App {
   text-align: center;
+  font-family: "Merriweather", serif;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+.tittle{
+  align-self: initial;
+  align-content: space-between;
+  align-items: center;
+  line-height: 1.3;
+  font-family: "Merriweather", serif;
+  font-weight: 300;
+  display:grid;
+}
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
+
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0c1e42;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +34,32 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.btn {
+  position: relative;
+  display: inline-block;
+  width: auto;
+  padding: 12px 30px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  background-color:white;
+  color: black;
+  border-radius: 5px;
+  letter-spacing: 1.1px;
+  box-shadow: 0px 15px 15px rgba(250, 250, 238, 0.1);
+  transition: 0.3s;
+  text-align: center;
+  text-transform: capitalize;
+  border: 1px solid black;
+  cursor: pointer;
+  font-family: "Merriweather", serif;
+}
+.btn:hover {
+  background-color: rgb(160, 189, 250);
+  color: rgb(3, 28, 83);
+  box-shadow: none;
 }
 
 .App-link {
